fix(MSE-147): fix styles of GenreSelector and SearchBar on small screen

--- a/src/components/Drawer/Drawer.module.css
+++ b/src/components/Drawer/Drawer.module.css
@@ -5,7 +5,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 998;
+  z-index: 1000;
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.3s ease, visibility 0.3s ease;
@@ -25,7 +25,7 @@
   padding: 16px 24px;
   background: linear-gradient(to right, black 20%, transparent);
   box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
+  z-index: 1001;
   transform: translateX(-100%);
   transition: transform 0.3s ease;
   display: flex;
