--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -85,10 +85,10 @@
   color: white;
 }
 
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 480px) {
 
   .searchBox.expanded {
-    width: 220px;
+    width: 157px;
   } 
 
 }
